; ModuleID = '/home/carl/AnghaBench/linux/crypto/asymmetric_keys/extr_pkcs8_parser.c_pkcs8_note_key.c'
source_filename = "/home/carl/AnghaBench/linux/crypto/asymmetric_keys/extr_pkcs8_parser.c_pkcs8_note_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pkcs8_parse_context = type { i64, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pkcs8_note_key(i8* %0, i64 %1, i8 zeroext %2, i8* %3, i64 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8, align 1
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca %struct.pkcs8_parse_context*, align 8
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store i8 %2, i8* %8, align 1
  store i8* %3, i8** %9, align 8
  store i64 %4, i64* %10, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = bitcast i8* %12 to %struct.pkcs8_parse_context*
  store %struct.pkcs8_parse_context* %13, %struct.pkcs8_parse_context** %11, align 8
  %14 = load i8*, i8** %9, align 8
  %15 = load %struct.pkcs8_parse_context*, %struct.pkcs8_parse_context** %11, align 8
  %16 = getelementptr inbounds %struct.pkcs8_parse_context, %struct.pkcs8_parse_context* %15, i32 0, i32 1
  store i8* %14, i8** %16, align 8
  %17 = load i64, i64* %10, align 8
  %18 = load %struct.pkcs8_parse_context*, %struct.pkcs8_parse_context** %11, align 8
  %19 = getelementptr inbounds %struct.pkcs8_parse_context, %struct.pkcs8_parse_context* %18, i32 0, i32 0
  store i64 %17, i64* %19, align 8
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
